# fpl_notes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_user_db.sql  nginx.conf  pyproject.toml
.github/workflows/: github-actions.yml
fpl_notes/: .env.example  manage.py  pytest.ini
fpl_notes/accounts/: forms.py  urls.py  views.py
fpl_notes/accounts/templates/accounts/: login.html  register.html
fpl_notes/fpl_notes/: asgi.py  settings.py  urls.py  wsgi.py
fpl_notes/notes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
fpl_notes/notes/migrations/: 0001_initial.py
fpl_notes/notes/services/: fpl_magic.py
fpl_notes/notes/static/notes/css/: styles.css
fpl_notes/notes/templates/notes/: accept_sub.html  add_note.html  add_team.html  base.html  my_team.html  note.html  notes_list.html
fpl_notes/tests/: test_accounts.py  test_note.py  test_prepare_team.py
